--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "maturin"
 [project]
 name = "tantivy"
 requires-python = ">=3.9"
+version = "0.22.0"
 
 [project.optional-dependencies]
 dev = [
